Fix Map control styles
Due to the current map layout, the leaflet-control-container element was
getting lost (attribution was not visible, for example). These style
changes fix this by forcing the container to have a position: absolute
whenever it falls inside of a parent .map-fullscreen element.

An additional rule for .map-intro pushes up this element from the bottom
by a height to match the height of the page title which appears at the
bottom.

--- a/source/assets/stylesheets/_global.scss
+++ b/source/assets/stylesheets/_global.scss
@@ -66,7 +66,21 @@
   height: 100vh;
 
   .leaflet-control-container {
-    position: relative;
+    bottom: 0;
+    position: absolute;
     top: 60px;
+    width: 100%;
+    z-index: 1100;
+  }
+}
+
+.map-intro {
+  @extend .map-fullscreen;
+
+  .leaflet-control-container {
+    bottom: 4.7rem;
+
+    @include media($medium-screen-up) {
+      bottom: 5.45rem;
   }
 }
